--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <style>
     body {
-        background: #1a1a1a;
-        color: #ccc;
+        background: #121212;
+        color: #ffffff;
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 0;
@@ -25,7 +25,13 @@
         border-radius: 50%;
         width: 300px;
         height: 300px;
-        animation: rotate 6s infinite linear;
+        overflow: hidden;
+    }
+
+    .profile img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .info {
@@ -44,10 +50,11 @@
 
     .social-links {
         display: flex;
+        margin-top: 15px;
     }
 
     .social-links a {
-        color: #ccc;
+        color: #ffffff;
         font-size: 24px;
         margin-right: 15px;
         transition: color 0.3s ease-in-out;
@@ -57,12 +64,14 @@
         color: #4CAF50;
     }
 
-    @keyframes rotate {
+    @keyframes fadeIn {
         from {
-            transform: rotate(0deg);
+            opacity: 0;
+            transform: translateY(20px);
         }
         to {
-            transform: rotate(360deg);
+            opacity: 1;
+            transform: translateY(0);
         }
     }
 </style>
@@ -70,7 +79,7 @@
 <body>
 <div class="container">
     <div class="profile">
-        <img class="profile" src="https://avatars.githubusercontent.com/u/65587986?v=4" />
+        <img src="https://avatars.githubusercontent.com/u/65587986?v=4" />
     </div>
     <div class="info">
         <h1>Hey, I'm<br /><strong>RAJIV GOPAL SINGH</strong></h1>
@@ -82,5 +91,14 @@
         </div>
     </div>
 </div>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const profile = document.querySelector(".profile");
+        const info = document.querySelector(".info");
+
+        profile.style.animation = "fadeIn 1.5s ease-out";
+        info.style.animation = "fadeIn 1.5s ease-out";
+    });
+</script>
 </body>
 </html>
